--- a/requirements.txt
+++ b/requirements.txt
@@ -1,156 +1,140 @@
 annotated-types==0.7.0
-anyio==4.8.0
-apturl==0.5.2
-attrs==21.2.0
-Babel==2.8.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-black==21.10b0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-charset-normalizer==2.0.6
+anyio==4.9.0
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==1.0.4
 click==8.1.8
-colorama==0.4.4
-command-not-found==0.3
-commonmark==0.9.1
-cov-core==1.15.0
-coverage==6.2
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
+coloredlogs==15.0.1
+Deprecated==1.2.18
+distro==1.9.0
 dnspython==2.7.0
-duplicity==0.8.21
+durationpy==0.9
 email_validator==2.2.0
 exceptiongroup==1.2.2
-execnet==1.9.0
-fastapi==0.115.8
+fastapi==0.115.9
 fastapi-cli==0.0.7
-fasteners==0.14.1
-flake8==4.0.1
-future==0.18.2
-gpg==1.16.0
-h11==0.13.0
-html5lib==1.1
-httpcore==1.0.7
-httplib2==0.20.2
+filelock==3.18.0
+flatbuffers==25.2.10
+fsspec==2025.3.2
+google-auth==2.38.0
+googleapis-common-protos==1.69.2
+greenlet==3.1.1
+grpcio==1.71.0
+h11==0.14.0
+httpcore==1.0.8
 httptools==0.6.4
 httpx==0.28.1
-idna==3.3
-importlib-metadata==4.6.4
-iniconfig==1.1.1
-isort==5.6.4
-jeepney==0.7.1
-Jinja2==3.1.5
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-livereload==2.6.3
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.8.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.3.6
+huggingface-hub==0.30.2
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+Jinja2==3.1.6
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kubernetes==32.0.1
+langchain==0.3.23
+langchain-core==0.3.51
+langchain-text-splitters==0.3.8
+langsmith==0.3.30
 markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-mccabe==0.6.1
+MarkupSafe==3.0.2
 mdurl==0.1.2
-mercurial==6.1.1
-meson==0.61.2
-mkdocs==1.1.2
+mmh3==5.1.0
 monotonic==1.6
-more-itertools==8.10.0
-mypy==0.942
-mypy-extensions==0.4.3
-nala==0.11.1
-netifaces==0.11.0
-nose2==0.9.2
-numpy==1.21.5
-oauthlib==3.2.0
-olefile==0.46
-packaging==21.3
-paramiko==2.9.3
-pathspec==0.9.0
-pexpect==4.8.0
-Pillow==9.0.1
-platformdirs==2.5.1
-pluggy==0.13.0
-powerline-status==2.7
-protobuf==3.12.4
-proton-vpn-gtk-app==4.4.4
-psutil==5.9.0
-ptyprocess==0.7.0
-py==1.10.0
-pycairo==1.20.1
-pycodestyle==2.8.0
-pycups==2.0.1
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyflakes==2.4.0
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+oauthlib==3.2.2
+onnxruntime==1.21.0
+opentelemetry-api==1.32.0
+opentelemetry-exporter-otlp-proto-common==1.32.0
+opentelemetry-exporter-otlp-proto-grpc==1.32.0
+opentelemetry-instrumentation==0.53b0
+opentelemetry-instrumentation-asgi==0.53b0
+opentelemetry-instrumentation-fastapi==0.53b0
+opentelemetry-proto==1.32.0
+opentelemetry-sdk==1.32.0
+opentelemetry-semantic-conventions==0.53b0
+opentelemetry-util-http==0.53b0
+orjson==3.10.16
+overrides==7.7.0
+packaging==24.2
+pillow==11.2.1
+posthog==3.24.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.3
+pydantic_core==2.33.1
 Pygments==2.19.1
-PyGObject==3.42.1
-pyinotify==0.9.6
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pytest==6.2.5
-pytest-cov==3.0.0
-pytest-forked==1.4.0
-pytest-sugar==0.9.4
-pytest-xdist==2.5.0
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.1
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-multipart==0.0.20
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
-requests==2.25.1
-rfc3986==1.5.0
-rich==13.9.4
-rich-toolkit==0.13.2
-SecretStorage==3.3.1
-shellingham==1.4.0
-six==1.16.0
-sniffio==1.2.0
-socksio==1.0.0
-soupsieve==2.3.1
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rich-toolkit==0.14.1
+rpds-py==0.24.0
+rsa==4.9
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.0.2
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
 starlette==0.45.3
-systemd-python==234
-termcolor==1.1.0
-toml==0.10.2
-tomli==1.2.2
-tornado==6.1
-typed-ast==1.4.3
-typer==0.15.1
-typing_extensions==4.12.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-uvicorn==0.34.0
+sympy==1.13.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+tomli==2.2.1
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.51.2
+triton==3.2.0
+typer==0.15.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.34.1
 uvloop==0.21.0
-vboxapi==1.0
-wadllib==1.3.6
-watchfiles==1.0.4
-webencodings==0.5.1
-websockets==15.0
-WoeUSB-ng==0.2.12
-wxPython==4.0.7
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+watchfiles==1.0.5
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+zipp==3.21.0
+zstandard==0.23.0
